tests/typecast/typecast.exp
Error ------------------------------------------------------------------------------------------------- typecast.js:7:14

Cannot cast `"hey"` to number because string [1] is incompatible with number [2]. [incompatible-cast]

   typecast.js:7:14
   7|     var n = ("hey" : number);
                   ^^^^^ [1]

References:
   typecast.js:7:22
   7|     var n = ("hey" : number);
                           ^^^^^^ [2]



Found 1 error
